GNU bug report logs - #18239
z suffix

Previous Next

Package: gzip;

Reported by: Sam Geeraerts <samgee <at> elmundolibre.be>

Date: Sun, 10 Aug 2014 16:51:01 UTC

Severity: normal

Done: Paul Eggert <eggert <at> cs.ucla.edu>

Bug is archived. No further changes may be made.

To add a comment to this bug, you must first unarchive it, by sending
a message to control AT debbugs.gnu.org, with unarchive 18239 in the body.
You can then email your comments to 18239 AT debbugs.gnu.org in the normal way.

Toggle the display of automated, internal messages from the tracker.

View this report as an mbox folder, status mbox, maintainer mbox


Report forwarded to bug-gzip <at> gnu.org:
bug#18239; Package gzip. (Sun, 10 Aug 2014 16:51:01 GMT) Full text and rfc822 format available.

Acknowledgement sent to Sam Geeraerts <samgee <at> elmundolibre.be>:
New bug report received and forwarded. Copy sent to bug-gzip <at> gnu.org. (Sun, 10 Aug 2014 16:51:01 GMT) Full text and rfc822 format available.

Message #5 received at submit <at> debbugs.gnu.org (full text, mbox):

From: Sam Geeraerts <samgee <at> elmundolibre.be>
To: bug-gzip <at> gnu.org
Subject: z suffix
Date: Sun, 10 Aug 2014 15:58:09 +0200
I would like to point out a bug that has already been reported last
year [1].

Observed behaviour:

$ echo foo > test
$ gzip --suffix z test
$ ls testz
testz
$ gzip -d --suffix z testz
gzip: testz: unknown suffix -- ignored

Expected behaviour:

$ gzip -d --suffix z testz
$ ls test
test

From the comment in function get_suffix I gather that the "z" suffix is
overlooked in the sequence of suffixes to try. I've attached a patch
that makes it work for me.

[1] http://lists.gnu.org/archive/html/bug-gzip/2013-07/msg00012.html

Kind regards,
Sam




Reply sent to Paul Eggert <eggert <at> cs.ucla.edu>:
You have taken responsibility. (Sun, 10 Aug 2014 23:32:02 GMT) Full text and rfc822 format available.

Notification sent to Sam Geeraerts <samgee <at> elmundolibre.be>:
bug acknowledged by developer. (Sun, 10 Aug 2014 23:32:02 GMT) Full text and rfc822 format available.

Message #10 received at 18239-done <at> debbugs.gnu.org (full text, mbox):

From: Paul Eggert <eggert <at> cs.ucla.edu>
To: Sam Geeraerts <samgee <at> elmundolibre.be>, 18239-done <at> debbugs.gnu.org
Subject: Re: bug#18239: z suffix
Date: Sun, 10 Aug 2014 16:31:10 -0700
[Message part 1 (text/plain, inline)]
Sam Geeraerts wrote:
> I've attached a patch
> that makes it work for me.

Thanks for re-reporting that.  I didn't see a patch in your email, but I 
installed one (attached); please give it a try.
[0001-gzip-fix-suffix-z-bug-Bug-18239.patch (text/plain, attachment)]

Information forwarded to bug-gzip <at> gnu.org:
bug#18239; Package gzip. (Sun, 24 Aug 2014 17:29:02 GMT) Full text and rfc822 format available.

Message #13 received at 18239-done <at> debbugs.gnu.org (full text, mbox):

From: Sam Geeraerts <samgee <at> elmundolibre.be>
To: Paul Eggert <eggert <at> cs.ucla.edu>
Cc: 18239-done <at> debbugs.gnu.org
Subject: Re: bug#18239: z suffix
Date: Sun, 24 Aug 2014 19:28:20 +0200
Op Sun, 10 Aug 2014 16:31:10 -0700
schreef Paul Eggert <eggert <at> cs.ucla.edu>:

> Thanks for re-reporting that.  I didn't see a patch in your email,
> but I installed one (attached); please give it a try.

Sorry, forgot to attach mine. Yours is cleaner anyway and works fine.
Thanks for the fix.




bug archived. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Mon, 22 Sep 2014 11:24:04 GMT) Full text and rfc822 format available.

This bug report was last modified 9 years and 239 days ago.

Previous Next


GNU bug tracking system
Copyright (C) 1999 Darren O. Benham, 1997,2003 nCipher Corporation Ltd, 1994-97 Ian Jackson.